--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@ body{
     z-index: 10;
 }
 .container{
-    background-image: linear-gradient(to bottom, black, gray);
+    background-color: dimgray;
 }
 .menu-container{
     display: grid;
@@ -53,39 +53,15 @@ body{
 .menu-container a{
     font-size: 15px;
     font-weight: bold;
-    color: white;
+    color: black;
     border-radius: 5px;
-    transition: font-size 0.5s;
 }
 #index{
     background-color: rgba(10, 20, 30, 0);
 }
 .menu-container li a:hover {
-    color: gold;
-    font-size: 15.5px;
-
-    animation-name: un_efecto;
-    animation-iteration-count: infinite;
-    animation-timing-function: ease-in;
-    animation-duration: 2s;
-    animation-delay: 0s;
+    color: white;
 }
-@keyframes un_efecto{
-    0%{ font-size: 15.5px; }
-    10%{ font-size: 16px; }
-    20%{ font-size: 16.5px; }
-    30%{ font-size: 17px; }
-    40%{ font-size: 17.5px; }
-    50%{ font-size: 18px; }
-    60%{ font-size: 17.5px; }
-    70%{ font-size: 17px; }
-    80%{ font-size: 16.5px; }
-    90%{ font-size: 16px; }
-    100%{ font-size: 15.5px; }
-} 
-
-
-
 
 
 .tiulo-container{
@@ -101,17 +77,7 @@ body{
     color: white;
     margin-top: 11%;
     margin-left: 5%;
-    width: 95%;
-    animation-name: move-right;
-    animation-duration: 3s;
-    animation-delay: 0s;
 }
-@keyframes move-right{
-    0%{ margin-left: 100%; }
-} 
-
-
-
 .titulo__subpag{
     grid-row: 2 / -1;
     font-family: 'Michroma';
@@ -119,14 +85,7 @@ body{
     color: white;
     margin-left: 45%;
     margin-bottom: 10%;
-    animation-name: move-left;
-    animation-duration: 3s;
-    animation-delay: 0s;
 }
-@keyframes move-left{
-    0%{ margin-left: 0%; }
-}
-
 
 
 .footer{
@@ -599,8 +558,6 @@ body{
 }
 
 
-
-
 /*------------------------------------NOSOTROS------------------------------------*/
 .nosotros2{
     transform:translateY(6%);
@@ -634,23 +591,10 @@ body{
     color: gold;
 }
 
-
 #logo__container{
     grid-column: 2 / 3;
     grid-row: 3 / 5;
 }
-
-
-#logo__container :hover{
-    transform: rotate(0deg);
-    animation-name: logo-rotate;
-    animation-duration: 1s;
-    animation-delay: 0s;
-}
-@keyframes logo-rotate{
-    100%{ transform: rotate(360deg); }
-}
-
 
 #coderlogo{
     margin-left: 100px;
@@ -944,22 +888,13 @@ body{
     justify-content: center;
 }
 .container-img__plantillas{
-    opacity: 100;
     margin: 20px;
     padding: 10px;
     border: 2px;
     border-style: solid;
     border-color: white;
     border-radius: 25px;
-    animation-name: opacity;
-    animation-duration: 1s;
-    animation-timing-function: ease-in;
-    animation-delay: 0s;
 }
-@keyframes opacity{
-    0%{ opacity: 00;}
-}
-
 
 
 .trabajos-titulo{
@@ -987,13 +922,6 @@ body{
     border-style: solid;
     border-color: white;
     border-radius: 25px;
-    animation-name: opacity;
-    animation-duration: 1s;
-    animation-timing-function: ease-in;
-    animation-delay: 0s;
-}
-@keyframes opacity{
-    0%{ opacity: 00;}
 }
 
 @media screen and ( max-width: 412px){
