--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 *{  
-    text-decoration: none;
+    text-decoration: none !important;
     margin: 0;
     padding: 0;
 }
@@ -13,8 +13,8 @@ body{
     width: 100%;
     z-index: 10;
 }
-.container{
-    background-color: dimgray;
+.containerx{
+    background-image: linear-gradient(to bottom, black, gray);
 }
 .menu-container{
     display: grid;
@@ -53,15 +53,39 @@ body{
 .menu-container a{
     font-size: 15px;
     font-weight: bold;
-    color: black;
+    color: white;
     border-radius: 5px;
+    transition: font-size 0.5s;
 }
 #index{
     background-color: rgba(10, 20, 30, 0);
 }
 .menu-container li a:hover {
-    color: white;
+    color: gold;
+    font-size: 15.5px;
+
+    animation-name: un_efecto;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in;
+    animation-duration: 2s;
+    animation-delay: 0s;
 }
+@keyframes un_efecto{
+    0%{ font-size: 15.5px; }
+    10%{ font-size: 16px; }
+    20%{ font-size: 16.5px; }
+    30%{ font-size: 17px; }
+    40%{ font-size: 17.5px; }
+    50%{ font-size: 18px; }
+    60%{ font-size: 17.5px; }
+    70%{ font-size: 17px; }
+    80%{ font-size: 16.5px; }
+    90%{ font-size: 16px; }
+    100%{ font-size: 15.5px; }
+} 
+
+
+
 
 
 .tiulo-container{
@@ -77,7 +101,17 @@ body{
     color: white;
     margin-top: 11%;
     margin-left: 5%;
+    width: 95%;
+    animation-name: move-right;
+    animation-duration: 3s;
+    animation-delay: 0s;
 }
+@keyframes move-right{
+    0%{ margin-left: 100%; }
+} 
+
+
+
 .titulo__subpag{
     grid-row: 2 / -1;
     font-family: 'Michroma';
@@ -85,11 +119,18 @@ body{
     color: white;
     margin-left: 45%;
     margin-bottom: 10%;
+    animation-name: move-left;
+    animation-duration: 3s;
+    animation-delay: 0s;
+}
+@keyframes move-left{
+    0%{ margin-left: 0%; }
 }
 
 
+
 .footer{
-    transform: translateY(45%);
+    transform: translateY(36%);
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr;
@@ -558,6 +599,8 @@ body{
 }
 
 
+
+
 /*------------------------------------NOSOTROS------------------------------------*/
 .nosotros2{
     transform:translateY(6%);
@@ -565,48 +608,61 @@ body{
     grid-template-columns: 50% 50%;
     grid-auto-rows: auto;
 }
-#nosotros__titulo{
+.nosotros__titulo{
     margin: 20px;
-    grid-column: 1 / 2;
+    grid-column: 1 / -1;
     font-family: 'Electrolize';
     font-size: 3em;
-    color: rgb(252, 252, 252);
+    color: rgb(0, 0, 0);
 }
 .nosotros__p{
     margin-left: 10%;
     grid-row: 2 / 3;
-    color: white;
+    color: black !important;
     font-family: 'Michroma';
     font-size: 20px;
     text-align: justify;
 }
 
 .nosotros__p a{
-    color: white;
+    color: black !important;
     font-style: italic;
     transition: color .8s;
 }
 
 .nosotros__p a:hover{
-    color: gold;
+    color: gold !important;
 }
+
 
 #logo__container{
     grid-column: 2 / 3;
     grid-row: 3 / 5;
 }
 
+
+#logo__container :hover{
+    transform: rotate(0deg);
+    animation-name: logo-rotate;
+    animation-duration: 1s;
+    animation-delay: 0s;
+}
+@keyframes logo-rotate{
+    100%{ transform: rotate(360deg); }
+}
+
+
 #coderlogo{
-    margin-left: 100px;
+    margin-left: 35%;
     width: 30em;
     
 }
 .nosotros__titulo2{
-    margin-top: 60px;
+    margin-top: 0px;
     grid-row: 3 / 4;
     font-family: 'Electrolize';
     font-size: 3em;
-    color: rgb(252, 252, 252);
+    color: rgb(0, 0, 0) !important;
 }
 .nosotros__p2{
     margin-top: 20px;
@@ -614,12 +670,12 @@ body{
     grid-column: 1 / 2;
     grid-row: 4 / 5;
     font-family: 'Michroma';
-    font-size: 1.3em;
-    color: white;
+    font-size: 5pxem;
+    color: rgb(0, 0, 0) !important;
     text-align: justify;
 }
 .copyright2{
-    margin-top: 6%;
+    margin-top: 3%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
 }
@@ -872,8 +928,9 @@ body{
     grid-column: 1 / 2;
     font-family: 'Electrolize';
     color: white;
+    transform: translateY(60%);
     font-size: 3em;
-    margin: 80px 0 0 20px;
+    margin: 80px 0 50px 20px;
     padding: 0;
 }
 
@@ -888,20 +945,32 @@ body{
     justify-content: center;
 }
 .container-img__plantillas{
+    opacity: 100;
     margin: 20px;
     padding: 10px;
     border: 2px;
     border-style: solid;
     border-color: white;
     border-radius: 25px;
+    animation-name: opacity;
+    animation-duration: 1s;
+    animation-timing-function: ease-in;
+    animation-delay: 0s;
+}
+@keyframes opacity{
+    0%{ opacity: 00;}
 }
 
 
+
 .trabajos-titulo{
-    grid-row: 3 / 4;
+    grid-column: 1 / 2;
     font-family: 'Electrolize';
     color: white;
+    transform: translateY(60%);
     font-size: 3em;
+    margin: 80px 0 50px 20px;
+    padding: 0;
 }
 
 #container-2-img{
@@ -922,6 +991,13 @@ body{
     border-style: solid;
     border-color: white;
     border-radius: 25px;
+    animation-name: opacity;
+    animation-duration: 1s;
+    animation-timing-function: ease-in;
+    animation-delay: 0s;
+}
+@keyframes opacity{
+    0%{ opacity: 00;}
 }
 
 @media screen and ( max-width: 412px){
@@ -960,6 +1036,7 @@ body{
         margin: 60px 0 0 20px;
         font-size: 2em;
     }
+
     
     #container-2-img{
         grid-column: 1 / -1;
@@ -1063,6 +1140,11 @@ body{
 
 
 /*---------------------------------SERVICIOS----------------------*/
+
+.card{
+    transform: translateY(80%);
+    margin-left: 10%;
+}
 .container-tarjetas{
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
@@ -1645,7 +1727,23 @@ body{
     grid-auto-rows: auto;
 }
 
+.container{
+    transform: translateY(5%);
+}
 
+.col-2{
+    color: white;
+}
+.col-22{
+    margin-left: 15px;
+}
+.col-form-label{
+    color: white;
+}
+.form-check-label{
+    color: white;
+    margin: 8px 0 20px 0;
+}
 
 .formulario-contacto__nombre{
     grid-column: 1 / 2;
@@ -1822,7 +1920,7 @@ body{
     display: inline;
     position: absolute;
     left: 51.5%;
-    bottom: 61.5%;
+    bottom: 75%;
     width: 40%;
 }
 .lineasdecontacto__tel{
@@ -1876,7 +1974,7 @@ body{
 .google-maps{
     position: absolute;
     left: 51.5%;
-    bottom: 10%;
+    bottom: 20%;
 }
 
 
