--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,101 +1,26 @@
+@import "./1-Settings/variables";
+@import "./2-Components-Footer/footers";
+@import "./2-Components-Body/bodies";
+
+
+@mixin titulosP {
+    margin: 20px;
+    font-family: $font-primary;
+    font-size: 3em;
+    color: rgb(255, 255, 255);
+}
+
 *{  
     text-decoration: none !important;
     margin: 0;
     padding: 0;
 }
 
-/*===================VARS=================*/
-
-$font-primary: 'Electrolize';
-$font-secondary: 'Michroma';
-$font-l: 13px;
-$font-m: 11px;
-$font-s: 9px;
-$font-xs: 7px;
-
-/*========================================*/
-
 body{
     background-color: black;
 }
 
-.tiulo-container{
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-    align-items: center;
-    transform: translateY(100px);
-}
-
-.titulo__pag{
-    grid-row: 1 / 2;
-    font-family: $font-primary;
-    font-size: 120px;
-    color: white;
-    margin-top: 11%;
-    margin-left: 5%;
-    width: 95%;
-    animation-name: move-right;
-    animation-duration: 3s;
-    animation-delay: 0s;
-}
-
-@keyframes move-right{
-    0%{ margin-left: 100%; }
-} 
-
-.titulo__subpag{
-    grid-row: 2 / -1;
-    font-family: $font-secondary;
-    font-size: 34px;
-    color: white;
-    margin-left: 45%;
-    margin-bottom: 10%;
-    animation-name: move-left;
-    animation-duration: 3s;
-    animation-delay: 0s;
-}
-
-@keyframes move-left{
-    0%{ margin-left: 0%; }
-}
-
-.footer{
-    transform: translateY(36%);
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 1fr;
-}
-
-.dev1{
-    grid-column: 1 / 2;
-    margin-left: 20%;
-}
-
-.dev2{
-    position: absolute;
-    grid-column: 1 / 2;
-    justify-self: center;
-}
-
-#redes{
-    grid-column: 3 / 4;
-    justify-self: end;
-    align-self: end;
-    margin-right: 5%;
-}
-
-#copyright{
-    grid-column: 2 / 3;
-    justify-self: center;
-    align-self: end;
-    color: white;
-}
-
-.copyright--uppercase{
-    text-transform: uppercase;
-    font-size: $font-l;
-}
-
+/*------------------------------------------------------------------------------INICIO-----------------------------------*/
 @media screen and ( max-width: 412px){
 
     .texto-bar{
@@ -110,7 +35,7 @@ body{
     }
 
     .titulo__pag{
-        margin: 150px 0 20px 10px;
+        margin: 130px 0 20px 10px;
         grid-row: 1 / 2;
         font-size: 35px;
         justify-self: center;
@@ -137,7 +62,8 @@ body{
         grid-column: 2 / 3;
         width: 80%;
     }
-/*=======================================NESTING============================*/
+
+    //NESTING
     #redes{
         display: flex;
         flex-direction: column;
@@ -148,7 +74,6 @@ body{
                 padding-bottom: 30%;
             }
     }
-/*=======================================NESTING============================*/
     #copyright{
         margin-top: 10%;
         grid-column: 1 / 4;
@@ -194,7 +119,8 @@ body{
     .dev2{
         grid-column: 2 / 3;
     }
-/*=======================================NESTING============================*/
+
+//NESTING
     #redes{
         display: flex;
         flex-direction: column;
@@ -204,7 +130,6 @@ body{
                 padding-bottom: 50%;
             }
     }
-/*==========================================================================*/
 
     #copyright{
         grid-column: 1 / 4;
@@ -336,87 +261,7 @@ body{
 
 
 
-/*------------------------------------NOSOTROS------------------------------------*/
-
-.nosotros__titulo{
-    margin: 20px;
-    font-family: $font-primary;
-    font-size: 3em;
-    color: rgb(0, 0, 0);
-}
-
-/*=======================================NESTING============================*/
-.nosotros__p{
-    margin-left: 10%;
-    color: black !important;
-    font-family: $font-secondary;
-    font-size: 20px;
-    text-align: justify;
-    a{
-        color: black !important;
-        font-style: italic;
-        transition: color .8s;
-
-        &:hover{
-            color: gold !important;
-        }
-    }
-}
-/*==========================================================================*/
-
-#logo__container{
-    grid-column: 2 / 3;
-    grid-row: 3 / 5;
-    margin-bottom: 30px;
-}
-
-#logo__container :hover{
-    transform: rotate(0deg);
-    animation-name: logo-rotate;
-    animation-duration: 1s;
-    animation-delay: 0s;
-}
-@keyframes logo-rotate{
-    100%{ transform: rotate(360deg); }
-}
-
-#coderlogo{
-    margin-left: 35%;
-    width: 30em;
-}
-
-.nosotros__titulo2{
-    margin-top: 0px;
-    font-family: $font-primary;
-    font-size: 3em;
-    color: rgb(0, 0, 0) !important;
-}
-
-.nosotros__p2{
-    margin-top: 20px;
-    margin-left: 10%;
-    font-family: $font-secondary;
-    font-size: 20px;
-    color: rgb(0, 0, 0) !important;
-    text-align: justify;
-}
-
-.copyright2{
-    margin-top: 3%;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-}
-
-.copyright--uppercase2{
-    margin: 0 0 3% 0;
-    grid-column: 2 / 3;
-    justify-self: center;
-    text-transform: uppercase;
-    color: white;
-    font-size: $font-l;
-}
-
-
+/*-------------------------------------------------------------------------NOSOTROS------------------------------------------------------------*/
 @media screen and ( max-width: 412px){
 
     .texto-bar{
@@ -545,34 +390,7 @@ body{
     }
 }
 
-
-/*-------------------------------------PROYECTOS--------------------*/
-
-.titulo-in{
-    font-family: $font-primary;
-    color: white;
-    transform: translateY(60%);
-    font-size: 3em;
-    margin: 80px 0 10px 20px;
-    padding: 0;
-}
-
-.trabajos-titulo{
-    font-family: $font-primary;
-    color: white;
-    transform: translateY(60%);
-    font-size: 3em;
-    margin: 12% 0 10px 20px;
-    padding: 0;
-}
-
-.footer2{
-    transform: translateY(300%);
-}
-
-.copyright--uppercase2{
-    font-size: $font-l;
-}
+/*------------------------------------------------------------------------PROYECTOS----------------------------*/
 
 @media screen and ( max-width: 412px){
 
@@ -637,145 +455,7 @@ body{
     }
 }
 
-
-/*---------------------------------SERVICIOS----------------------*/
-
-.container-tarjetas{
-    display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
-    grid-template-rows: auto;
-}
-
-#services{
-    margin: 80px 0 0 20px;
-    grid-column: 1 / 2;
-    font-family: $font-primary;
-    font-size: 3em;
-    color: rgb(252, 252, 252);
-}
-
-#titulo-center{
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
-    margin: 5%;
-    font-family: $font-secondary;
-    font-size: 25px;
-    padding: 10px;
-    color: black;
-    background-color: white;
-    border-radius: 10px;
-    align-self: center;
-    justify-self: center;
-}
-
-#tarjeta1__lista1{
-    grid-column: 2 / 3;
-    grid-row: 3 / 4;
-    justify-self: center;
-}
-
-/*=======================================NESTING============================*/
-.tarjeta1{
-    color: black;
-    background-color:rgb(71, 71, 71);
-    padding: 50px 200px 50px 200px;
-    border-radius: 15px;
-    border: 2px;
-    border-style: solid;
-    border-color: white;
-    transition: background-color .8s;
-        
-        &:hover{
-            color: black;
-            background-color: lightgray;
-        }
-            h3{
-                font-family: $font-primary;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                font-size: 35px;
-            }
-                ul{
-                    li{
-                        font-family: $font-secondary;
-                        display: flex;
-                        flex-direction: column;
-                        align-items: center;
-                    }
-                }
-}
-/*==========================================================================*/
-
-#titulo-center2{
-    grid-column: 2 / 3;
-    grid-row: 5 / 6;
-    margin: 5%;
-    font-family: $font-secondary;
-    font-size: 25px;
-    padding: 10px;
-    color: black;
-    background-color: white;
-    border-radius: 10px;
-    align-self: center;
-    justify-self: center;
-}
-
-#tarjeta2__lista2{
-    grid-column: 2 / 3;
-    grid-row: 6 / 7;
-}
-
-/*=======================================NESTING============================*/
-.tarjeta2{
-    grid-column: 2 / 3;
-    grid-row: 7 / 8;
-    color: black;
-    background-color:rgb(71, 71, 71);
-    padding:50px 200px 50px 200px;
-    border-radius: 15px;
-    border: 2px;
-    border-style: solid;
-    border-color: white;
-    transition: background-color .8s;  
-        &:hover{
-            color: black;
-            background-color: lightgray;
-        }
-            h3{
-                font-family: $font-primary;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                font-size: 35px;
-            }
-                ul{
-                    li{
-                        font-family: $font-secondary;
-                        display: flex;
-                        flex-direction: column;
-                        align-items: center;
-                    }
-                }
-
-}
-/*==========================================================================*/
-
-.copyright3{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-}
-
-.copyright--uppercase3{
-    margin: 5% 0 2% 0;
-    grid-column: 2;
-    align-self: center;
-    justify-self: center;
-    text-transform: uppercase;
-    color: white;
-    font-size: $font-l;
-}
-
+/*------------------------------------------------------------------------SERVICIOS--------------------------------------------*/
 
 @media screen and ( max-width: 412px){
     
@@ -892,7 +572,7 @@ body{
     }
     
     .tarjeta2{
-        margin: 5% 20% 5% 20%;
+        margin: 5% 10% 5% 10%;
         padding: 0px;
     }
     
@@ -978,114 +658,10 @@ body{
     }
 }
 
-/*----------------------------------CONTACTO-------------------------*/
 
-.titulo-contacto{
-    transform: translateY(75px);
-    font-family: $font-primary;
-    color: rgb(255, 255, 255);
-    font-size: 3em;
-    margin-left: 20px;
-}
 
-.container{
-    transform: translateY(15%);
-}
 
-.col-2{
-    color: white;
-}
-
-.col-22{
-    margin-left: 15px;
-}
-
-.col-form-label{
-    color: white;
-}
-
-.form-check-label{
-    color: white;
-    margin: 8px 0 20px 0;
-}
-
-.titulo-aprende{
-    grid-column: 2 / 3;
-    grid-row: 1 / 2;
-    font-family: $font-secondary;
-    font-size: 20px;
-    color: white;
-}
-
-.lineasdecontacto{
-    transform: translateY(80%);
-}
-
-.lineasdecontacto__tel{
-    font-family: $font-secondary;
-    color: white;
-    transform: translateY(-150%);
-    margin-left: 50px;
-}
-
-.lineasdecontacto__mail{
-    font-family: $font-secondary;
-    color: white;
-    transform: translateY(-170%);
-    margin-left: 50px;
-}
-
-.lineasdecontacto__street1{
-    font-family: $font-secondary;
-    color: white;
-    transform: translateY(-170%);
-    margin-left: 50px;
-}
-
-.lineasdecontacto__street2{
-    font-family: $font-secondary;
-    color: white;
-    transform: translateY(-170%);
-    margin-left: 50px;
-}
-
-.lineasdecontacto__street3{
-    font-family: $font-secondary;
-    color: white;
-    transform: translateY(-170%);
-    margin-left: 50px;
-}
-
-.google-maps{
-    transform: translateY(-25%);
-    margin-left: 50%;
-}
-
-.footer-contact{
-    transform: translateY(-20%);
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-}
-
-#copyright4{
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
-    align-self: end;
-    justify-self: center;
-}
-
-.copyright--uppercase4{
-    text-transform: uppercase;
-    color: white;
-    font-size: $font-l;
-}
-
-#redes2{
-    margin-top: 10px;
-    grid-column: 3 / 4;
-    justify-self: center;
-}
+/*-------------------------------------------------------------------------CONTACTO----------------------------------------------*/
 
 @media screen and (max-width: 413px){
     
@@ -1097,7 +673,7 @@ body{
         font-size: 10px;
     }
     .lineasdecontacto__mail{
-        font-size: 14px;
+        font-size: 13px !important;
     }
 
     .copyright--uppercase4{
@@ -1253,10 +829,3 @@ body{
         grid-column: 1 / 4;
     }
 }
-
-
-
-
-
-
-
